<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health Visitor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="BMI">BMI</string>
    <string name="nutin">Nutition Intake</string>
    <string name="baldiet">Balanced Diet</string>
    <string name="about">About Me</string>
    <string name="exercise">Exercise Suggestions</string>
    <string name="collgname">Sir Padampat Singhania University</string>
    <string name="myname">Riya Dashoriya</string>
    <string name="heightLabel">Your Height (feets)</string>
    <string name="calculateButton">Calculate</string>
    <string name="EmptyString"/>
    <string name="weightLabel">Your Weight (LBS)</string>
    <string name="balButton">Suggest me a Balanced Diet</string>
    <string name="calLabel">Enter your calories intake</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="caloLabel">Enter your calories intake</string>
    <string name="bmiLabel">Enter your BMI </string>
    <string name="sugg">Suggest me for Exercise</string>
    <string name="pwd">Password:</string>
    <string name="rempwd">Remember Password?</string>
    <string name="nameuser">Username:</string>
    <string name="usrnew">Or if you are a new user</string>
    <string name="in">Sign In</string>
    <string name="uplog">Sign Up</string>
    <string name="signup_email">Email:</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_retype_password">Retype Password</string>
    <string name="signup_name">Name:</string>
    <string name="signup_phonenumber">PhoneNumber</string>
    <string name="signup_address">Address</string>
    <string name="signup_create_account">Create Account</string>
    <string name="signup_agree">Agree to terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="logot">Do you want to logout?</string>
    <string name="hye">hyee</string>
    <string name="hy">hyeeee</string>
    <string name="clickher">Cal Intake</string>
    <string name="options">Do you want to know your calorie intake? Click here</string>
    <string name="tea">Tea</string>
    <string name="appdesign">This app is Designed and Developed by:</string>
    <string name="splashscreen">Health Visitor</string>
    <string name="nameapp">Health Visitor</string>
    <string name="rice">Rice</string>
    <string name="close">Close</string>
    <string name="clkheretosee">Click here to see terms and conditions</string>
    <string name="dal">Pulses (Dal)</string>

</resources>
