<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_gravity="center_vertical"
    android:background="@drawable/ex">


    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:background="@drawable/baldi" android:orientation="vertical">

        <TextView

            android:id="@+id/textView1" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/calLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText android:id="@+id/calText" android:layout_width="match_parent"

            android:layout_height="wrap_content" android:inputType="numberDecimal">

            <requestFocus />
        </EditText>
        <RadioGroup android:id="@+id/rdbGp1" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
            <RadioButton android:id="@+id/rdb1" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:text="@string/male" />
            <RadioButton android:id="@+id/rdb2" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:text="@string/female" />

        </RadioGroup>
        <Button android:id="@+id/calculate1Button" android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="calculateClickHandler" android:text="@string/balButton" />

        <TextView android:id="@+id/result1Label"

            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/EmptyString"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
</ScrollView>