<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/ScrollView01"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/center">


    <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button android:id="@+id/button1" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"

                android:onClick="onClick1" android:text="@string/BMI" />
        </TableRow>
        <TableRow>
            <Button android:id="@+id/button2" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"

                android:onClick="onClick3" android:text="@string/nutin" />
        </TableRow>
        <TableRow>
            <Button android:id="@+id/button3" android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1" android:onClick="onClick2"

                android:text="@string/baldiet" />
        </TableRow>
        <TableRow>
            <Button android:id="@+id/button4" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"

                android:onClick="onClick4" android:text="@string/exercise" />
        </TableRow>
        <TableRow>

            <Button android:id="@+id/button5" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:onClick="onClick5"

                android:text="@string/about" />
        </TableRow>
        <TextView android:layout_width="150dp" android:layout_height="50dp" />
        <TableRow>
            <Button android:id="@+id/ClickHereLogout" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"

                android:onClick="onClick11" android:text="@string/logout" />
        </TableRow>

    </TableLayout>
</ScrollView>