<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/intake" android:orientation="vertical">
    <TextView android:layout_width="fill_parent" android:layout_height="0dip"
        android:layout_weight="1" android:text="@string/options"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <Button android:id="@+id/clickher" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:onClick="onClickr"
        android:text="@string/clickher" />
    <TextView android:id="@+id/resultLabel"

        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/EmptyString"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</LinearLayout>
