<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_weight="1" android:background="@drawable/me"

    android:orientation="vertical">

    <TextView android:id="@+id/textView3" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/appdesign"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView android:id="@+id/textView1" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/myname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView android:id="@+id/textView2" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/collgname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>