<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/ScrollView01"
    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_gravity="center_vertical"
    android:background="@drawable/login">

    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="center" android:gravity="center_horizontal">
            <TextView android:layout_weight="1" android:text="@string/nameuser" />
            <EditText android:id="@+id/signup_username_value"

                android:layout_marginRight="50dp" android:layout_weight="1"

                android:inputType="text" />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="center" android:gravity="center_horizontal">
            <TextView android:layout_weight="1" android:text="@string/pwd" />
            <EditText android:id="@+id/signup_password_value" android:layout_marginRight="50dp"
                android:layout_weight="1"

                android:inputType="textPassword" />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="center" android:gravity="center_horizontal">
            <TextView />
            <CheckBox android:id="@+id/chkRememberPassword" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:text="@string/rempwd" />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="center" android:gravity="center_horizontal">
            <Button android:id="@+id/buttonSignIn" android:onClick="onClick13"
                android:text="@string/in" />
        </TableRow>

        <TextView android:layout_width="150dp" android:layout_height="25dp" />
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="center" android:gravity="center_horizontal">
            <TextView android:id="@+id/newusr" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:text="@string/usrnew" />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="center" android:gravity="center_horizontal">
            <Button android:id="@+id/neusr" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:onClick="onClick14"
                android:text="@string/uplog" />
        </TableRow>
    </TableLayout>
</ScrollView>